--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <title>AdminPro</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="google-signin-client_id"
+      content="692332683716-merkj4labtdsfhn79nll4nrgeail2cu2.apps.googleusercontent.com"
+    />
+    <script src="https://apis.google.com/js/platform.js"></script>
+
     <!-- Favicon icon -->
     <link
       rel="icon"
